<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container_create_note_activity"
    tools:context=".CreateNoteActivity">

    <ImageView
        android:id="@+id/img_back_arrow_create_note_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:onClick="closeActivity"
        android:src="@drawable/ic_back_arrow_24dp"
        android:tint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_color_notes_create_note_activity"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_margin="16dp"
        android:background="@drawable/shape_rectangle_color_purple"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_back_arrow_create_note_activity" />

    <TextView
        android:id="@+id/tv_date_create_note_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/view_color_notes_create_note_activity"
        app:layout_constraintStart_toEndOf="@id/view_color_notes_create_note_activity"
        app:layout_constraintTop_toTopOf="@+id/view_color_notes_create_note_activity" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/picker"
        android:onClick="openColorsBottomSheetDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_title_create_note_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:textColorHint="@color/white_light"
        android:hint="@string/enter_title_note"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/view_color_notes_create_note_activity"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_create_note_activity" />

    <EditText
        android:id="@+id/et_content_create_note_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/enter_note"
        android:lineSpacingExtra="8dp"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/white_light"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/view_color_notes_create_note_activity"
        app:layout_constraintTop_toBottomOf="@+id/et_title_create_note_activity" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/shape_circle_lilac_color_corner_24dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:onClick="saveNote"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>